KE_OPTIONS = foreign

AM_CXXFLAGS = -g -Wall

noinst_PROGRAMS = $(top_builddir)/debug/SummarizeEngine
__top_builddir__debug_SummarizeEngine_SOURCES = \
    DPI.c \
    Carry.c \
    Common.c \
    Context.c \
    Core.c \
    DNS.c \
    Debug.c \
    Dump.c \
    Ether.c \
    HTTP.c \
    ICMP.c \
    IP.c \
    Logic.c \
    Parameter.c \
    Report.c \
    Session.c \
    Stream.c \
    Summarize.c \
    TCP.c \
    UDP.c \
    XDR.c \
    flow_stats_api.c \
    interface.c \
    MySQL.c \
    Tns.c

